--- a/style.css
+++ b/style.css
@@ -503,7 +503,8 @@ textarea {
   input[type="datetime-local"]:focus,
   input[type="color"]:focus,
   textarea:focus {
-    color: #626262; }
+    color: #626262;
+    outline: none; }
 
 select {
   border: 1px solid #dadada;
@@ -973,18 +974,26 @@ a {
 #secondary .widget_search .search-form,
 #colophon .widget_search .search-form {
   position: relative; }
-  #secondary .widget_search .search-form label,
-  #colophon .widget_search .search-form label {
-    display: block; }
   #secondary .widget_search .search-form input[type="search"],
   #colophon .widget_search .search-form input[type="search"] {
     box-sizing: border-box;
-    padding-right: 2.1538em;
+    padding-right: 2em;
     max-width: 100%;
     width: 100%; }
-  #secondary .widget_search .search-form .search-submit,
-  #colophon .widget_search .search-form .search-submit {
-    display: none; }
+  #secondary .widget_search .search-form button[type="submit"],
+  #colophon .widget_search .search-form button[type="submit"] {
+    border: none;
+    padding: 0;
+    position: absolute;
+    top: .85em;
+    right: 1.9190em; }
+    #secondary .widget_search .search-form button[type="submit"] svg,
+    #colophon .widget_search .search-form button[type="submit"] svg {
+      font-size: 16px;
+      font-size: 1rem;
+      fill: #626262;
+      height: 1.2666em;
+      width: 1.3333em; }
 
 /*--------------------------------------------------------------
 ## Tag Cloud Widget
