--- a/style.css
+++ b/style.css
@@ -1141,7 +1141,7 @@ a {
   z-index: 10; }
   #fullscreen-search form {
     position: absolute;
-    top: 30%;
+    top: 139px;
     left: 50%;
     transform: translate(-50%, -50%); }
     #fullscreen-search form h3 {
