--- a/sass/site/header/_search.scss
+++ b/sass/site/header/_search.scss
@@ -6,26 +6,32 @@
 	top: 60px;
 	z-index: 10;
 	
-	form {
-		position: absolute;
-		top: 139px;
+	.fullscreen-search-container {
 		left: 50%;
-		transform: translate(-50%, -50%);
-
-		h3 {
-			color: $color__text-main;
-			font-family: $font__details;
-			@include font-size(1.0666);
-			font-weight: 400;
-			text-align: center; 
-			text-transform: uppercase; 
-		}
+		position: absolute;
+		top: 139px; 
+		transform: translate(-50%, -50%);	
+	}
+	
+	h3 {
+		color: $color__text-main;
+		font-family: $font__details;
+		@include font-size(1.0666);
+		font-weight: 400;
+		letter-spacing: 1px;
+		text-align: center; 
+		text-transform: uppercase; 
+	}	
+	
+	form {
 
 		input[type="search"] {
 			background: transparent;
 			border: 0;
-			color: $color__text-main; 
+			color: $color__text-medium;
+			display: inline-block;
 			@include font-size(2.1333);
+			max-width: 493px; 
 			outline: none;
 			
 			@media (max-width: 768px) {
@@ -33,13 +39,20 @@
 			}
 		}
 
-		button {
+		button[type="submit"] {
+			border: none;
+			display: inline-block;
+			outline: none;
+			padding: 0;
+			position: absolute;
+			right: 0;
+			top: 93px;  
 			
 			svg {
-				@include font-size(1);
-				fill: $color__text-main;
-				height: 1.2666em;
-				width: 1.3333em;
+				fill: $color__text-meta;
+				height: 31px;
+				top: 32px;  
+				width: 32px;
 			}
 		}
 	}
