--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -24,6 +24,7 @@
 .page-title {
 	font-family: $font__details;
 	@include font-size(0.8666);
+	letter-spacing: 1px;
 	text-align: center;
 	text-transform: uppercase;
 }
