Search icon alignment

--- a/sass/site/header/_search.scss
+++ b/sass/site/header/_search.scss
@@ -30,7 +30,7 @@
 			border: 0;
 			color: $color__text-medium;
 			display: inline-block;
-			@include font-size(2.1333);
+			font-size: 32px; 
 			max-width: 493px; 
 			outline: none;
 			
@@ -46,13 +46,20 @@
 			padding: 0;
 			position: absolute;
 			right: 0;
-			top: 93px;  
+			top: 90px;  
+			
+			@media (max-width: 768px) {
+				top: 82px;
+			}
 			
 			svg {
 				fill: $color__text-meta;
 				height: 31px;
-				top: 32px;  
 				width: 32px;
+				
+				@media (max-width: 768px) {
+					height: 24px;  
+				}
 			}
 		}
 	}
