--- a/sass/site/header/_search.scss
+++ b/sass/site/header/_search.scss
@@ -6,11 +6,12 @@
 	top: 60px;
 	z-index: 10;
 	
-	.fullscreen-search-container {
+	.container {
 		left: 50%;
+		max-width: 658px; 
 		position: absolute;
-		top: 139px; 
-		transform: translate(-50%, -50%);	
+		top: 139px;
+		transform: translate(-50%, -50%);
 	}
 	
 	h3 {
@@ -31,11 +32,12 @@
 			color: $color__text-medium;
 			display: inline-block;
 			font-size: 32px; 
-			max-width: 493px; 
+			max-width: 493px;
 			outline: none;
 			
 			@media (max-width: 768px) {
 				font-size: 24px;
+				padding-left: 0; 
 			}
 		}
 
@@ -59,6 +61,10 @@
 				
 				@media (max-width: 768px) {
 					height: 24px;  
+				}
+
+				@media (max-width: 480px) {
+					display: none; 
 				}
 			}
 		}
