--- a/style.css
+++ b/style.css
@@ -636,14 +636,17 @@ a {
     display: block;
     text-decoration: none; }
 
+/*--------------------------------------------------------------
+## Social and Search Icons
+--------------------------------------------------------------*/
 .social-search {
   float: right; }
   .social-search .search-toggle {
     background: transparent;
     border: none;
-    height: 20px;
-    margin: 20px 0;
-    outline: none; }
+    line-height: 60px;
+    outline: none;
+    padding: 0; }
     .social-search .search-toggle .open {
       display: block; }
     .social-search .search-toggle .close {
@@ -1101,7 +1104,6 @@ a {
   #masthead .top-bar {
     background: #fff;
     border-bottom: 1px solid #ebebeb;
-    height: 60px;
     position: relative;
     z-index: 9999; }
     #masthead .top-bar::after {
@@ -1267,6 +1269,8 @@ a {
   line-height: normal;
   margin: 0.5em 0 0;
   text-align: center; }
+  .page .entry-title {
+    margin: 0; }
   .entry-title a {
     color: inherit;
     text-decoration: none; }
