--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -219,7 +219,7 @@
 			.dropdown-toggle {
 				background: transparent;
 				border: 0;
-				content: "";
+				content: "Open";
 				height: 30px;
 				padding: 6px;
 				position: absolute;
@@ -231,7 +231,7 @@
 
 				&:after {
 					color: $color__text-medium;
-					content: "d";
+					content: "\2193";
 					font-size: 15px;
 					line-height: 42px;
 					position: relative;
