Pull dark accent for now

--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -20,6 +20,12 @@ textarea {
 	word-wrap: break-word;
 }
 
+/*--------------------------------------------------------------
+## Headings
+--------------------------------------------------------------*/
 @import "headings";
 
+/*--------------------------------------------------------------
+## Copy
+--------------------------------------------------------------*/
 @import "copy";
