--- a/sass/woocommerce/_checkout.scss
+++ b/sass/woocommerce/_checkout.scss
@@ -36,7 +36,7 @@
 			border-radius: 0;
 
 			&:hover {
-				background-color: $color__primary-accent-dark;
+				background-color: $color__primary-accent;
 			}
 		}
 
@@ -177,7 +177,7 @@
 							border-radius: 0;
 
 							&:hover {
-								background-color: $color__primary-accent-dark;
+								background-color: $color__primary-accent;
 							}
 						}
 					}
