--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -28,11 +28,17 @@ hr {
 	margin-bottom: 1.5em;
 }
 
-@import "lists";
-
 img {
 	height: auto; /* Make sure images are scaled correctly. */
 	max-width: 100%; /* Adhere to container width. */
 }
 
+/*--------------------------------------------------------------
+## Lists
+--------------------------------------------------------------*/
+@import "lists";
+
+/*--------------------------------------------------------------
+## Tables
+--------------------------------------------------------------*/
 @import "tables";
