--- a/sass/modules/_accessibility.scss
+++ b/sass/modules/_accessibility.scss
@@ -7,11 +7,11 @@
 	overflow: hidden;
 
 	&:focus {
-		background-color: $color__background-screen;
+		background-color: #f1f1f1;
 		border-radius: 3px;
 		box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 		clip: auto !important;
-		color: $color__text-screen;
+		color: #21759b;
 		display: block;
 		@include font-size(0.875);
 		font-weight: bold;
@@ -22,11 +22,11 @@
 		text-decoration: none;
 		top: 5px;
 		width: auto;
-		z-index: 100000; /* Above WP toolbar. */
+		z-index: 100000; // Above WP toolbar.
 	}
 }
 
-/* Do not show the outline on the skip link target. */
+// Do not show the outline on the skip link target.
 #content[tabindex="-1"]:focus {
 	outline: 0;
 }
