--- a/style.css
+++ b/style.css
@@ -868,10 +868,8 @@ a {
     text-decoration: none;
     top: 5px;
     width: auto;
-    z-index: 100000;
-    /* Above WP toolbar. */ }
+    z-index: 100000; }
 
-/* Do not show the outline on the skip link target. */
 #content[tabindex="-1"]:focus {
   outline: 0; }
 
