--- a/sass/modules/_widgets.scss
+++ b/sass/modules/_widgets.scss
@@ -104,15 +104,23 @@
 
 	a {
 		border: 1px solid $color__border-button;
+		color: $color__text-main;
 		display: inline-block;
+		@include font-size(0.9333); // 15px base.
 		margin: 0 .107em .45em 0;
 		padding: .7642em .9785em .6213em;
 		line-height: normal;
-		
+		text-decoration: none;
+
 		&:hover {
 			background: $color__text-medium;
 			border-color: $color__text-medium; 
 			color: #fff;
 		}		
 	}
+}
+
+#secondary .widget_tag_cloud, 
+#colophon .widget_tag_cloud {
+	@include font-size(0.9285); // 14px base.
 }
