--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -18,9 +18,10 @@
 	padding: 5.3333em 0 5em;
 }
 
-// Archive and search results site content.
+// Archive search results and 404 site content.
 .archive .site-content,
-.search-results .site-content {
+.search-results .site-content,
+.error404 .site-content {
 	padding-top: 4em;
 }
 
